# Co-LRIO

./: CMakeLists.txt  README.md
config/: co_lrio_params.yaml  co_lrio_sim_params.yaml  odom_params_s3e_a.yaml  odom_params_s3e_b.yaml  odom_params_s3e_c.yaml  robot.urdf.xacro  rviz2_a.rviz  rviz2_b.rviz  rviz2_c.rviz  rviz2_ten_drone.rviz  rviz2_three_robot.rviz
include/: common.h  descriptorBasis.h  imuPreintegration.h  lidarIrisDescriptor.h  mapDatabase.h  outlierRejection.h  robustOptimizer.h  scanContextDescriptor.h  systemMonitor.h
include/third_parties/gicp/: fast_gicp.cpp  fast_gicp.hpp  fast_vgicp.cpp  fast_vgicp.hpp  fast_vgicp_cuda.cpp  fast_vgicp_cuda.hpp  fast_vgicp_voxel.hpp  lsq_registration.cpp  lsq_registration.hpp
include/third_parties/gicp/cuda/: compute_derivatives.cu  compute_derivatives.cuh  compute_mahalanobis.cu  compute_mahalanobis.cuh  covariance_estimation.cu  covariance_estimation.cuh  covariance_estimation_rbf.cu  covariance_regularization.cu  covariance_regularization.cuh  fast_vgicp_cuda.cu  fast_vgicp_cuda.cuh  find_voxel_correspondences.cu  find_voxel_correspondences.cuh  gaussian_voxelmap.cu  ndt_compute_derivatives.cu  ndt_compute_derivatives.cuh  ndt_cuda.cu  ndt_cuda.cuh
include/third_parties/gicp/impl/: fast_gicp_impl.hpp  fast_vgicp_cuda_impl.hpp  fast_vgicp_impl.hpp  lsq_registration_impl.hpp
include/third_parties/ikd_tree/: ikd_Tree.cpp  ikd_Tree.h
include/third_parties/nabo/: nabo.h
include/third_parties/risam/: RISAM2.h
launch/: run.launch.py  run_sim.launch.py
src/: concentratedMapping.cpp  lidarIrisDescriptor.cpp  lidarOdometry.cpp  scanContextDescriptor.cpp
